hecc I CHANGED STUFF

--- a/style.css
+++ b/style.css
@@ -5,3 +5,9 @@ h3 .death {
 header {
     background-color: rgb(255, 255, 255)
 }
+.jumbotron {
+    background-color: rgb(255, 255, 255)
+}
+row {
+    background-color: rgb(145, 69, 34)
+}
