I have changed alot, but most importantly is the change from 'header' to 'head' and same for 'footer' to 'foot' I also added a download to my APK file, and a link to my gmail, as well as a table in I for index.html  Alot has changed, and more yet is to be added.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-h3 .death {
+h3 {
     text-align: left;
     font-weight: 900;
+    font-style: oblique;
 }
 header {
     background-color: rgb(255, 255, 255)
